--- a/GC_MS_5_3B.qmd
+++ b/GC_MS_5_3B.qmd
@@ -4,10 +4,6 @@ format: gfm
 editor: visual
 ---
 
-## Quarto
-
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
 # Libraries
 
 ```{r}
@@ -39,15 +35,6 @@ Data for RRFs are coming from the US FDA Clap List. <https://cdrh-rst.fda.gov/ch
 Each file is in a pdf format and contains RRF values for 3 concentration of a surrogate. LCMS RRFs CLAP Negative Ion Detection.pdf (255.54 KB) LCMS RRFs CLAP Positive Ion Detection.pdf (279.48 KB) RRF GCMS for CLAP.pdf (322.77 KB)
 
 They are first extracted to perform the bootstrap simulation. Some data are n.d. or below DL. The current strategy is to change the n.d. to 0 and below DL to 0.001 based on the input of the Subject Matter Expert.
-
-# Extract GC/MS data
-
-Tried to extract the data directly from the pdf but it was complicated. I manually performed the extraction in Excel using PowerQuery.
-
-```{r}
-gc_ms <- extract_tables("dataset/GCMS.pdf", method="stream")
-gc_ms
-```
 
 # GC/MS data
 
@@ -140,7 +127,7 @@ hist(lcmsneg_clap_clean$"20 µg/mL",
 ## Define AET
 
 ```{r}
-AET <- 5
+AET <- 0.2
 ```
 
 ## Uniform distribution
@@ -180,7 +167,7 @@ hist(custom_sampled)
 
 ```{r}
 set.seed(123)
-RRF_norm <- rnorm(100, 1, 0.4)
+RRF_norm <- rnorm(50, 1, 0.2)
 RRF_norm[RRF_norm<0] <- 0.001 # avoiding negative numbers
 hist(RRF_norm)
 ```
@@ -204,11 +191,19 @@ summary_table <- data.frame(
   FN_Rate = numeric(),
   FP_Rate = numeric(),
   FN_SD = numeric(),
-  FP_SD = numeric()
+  FP_SD = numeric(),
+  precision = numeric(),
+  recall = numeric(),
+  F1 = numeric(),
+  f_beta = numeric()
 )
 ```
 
 ## GC-MS No Correction Scenarios
+
+Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ No UF correction
+
+Update 02 Jan 2026: add for loop and change the replace to FALSE Update 09 Jan 2026: add the exp concentration and change the base_conc_sim
 
 ```{r}
 set.seed(123)
@@ -221,12 +216,15 @@ total_TN <- 0
 total_points <- N_sim * N_extractables
 
 for (i in 1:N_sim) {
-## 1) Concentration around the AET
-base_conc_sim <- sample(custom_sampled, size = N_extractables, replace = TRUE)
-## B) Normal distribution
-simulated_RRF <- sample(RRF_norm, size = N_extractables, replace = FALSE)
+Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
+Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
+K <- runif(0.1 * N_extractables, min = 10,    max = 100)
+## 3) Concentration from a custom distribution
+base_conc_sim <- sample(c(Z,Y,K))
+## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
 ## alpha) No Correction
-corrected_conc <- base_conc_sim / simulated_RRF
+corrected_conc <- base_conc_sim * simulated_RRF
 
 total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
 total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
@@ -237,14 +235,30 @@ total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
-
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "No Correction",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
+  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
+
+```
+
+```{r}
+summary_table
 ```
 
 ```{r}
@@ -263,13 +277,18 @@ hist(simulated_RRF,
 Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ UF correction : from 2, 4, 5, 10 and UF = 1/(1-RSD)
 
 ```{r}
+#rsd <- function(x) {
+  #return(sd(x, na.rm = TRUE) / mean(x, na.rm = TRUE))
+#}
+
 rsd <- function(x) {
-  return(sd(x, na.rm = TRUE) / mean(x, na.rm = TRUE))
+  x_use = x[x<=1&x>0.05]
+  return(sd(x_use, na.rm = TRUE) / mean(x_use, na.rm = TRUE))
 }
 
 set.seed(123)
 N_sim <- 10000
-UF_RSD <- 1/(1-rsd(simulated_RRF)) # formula from ISO 10993-18
+UF_RSD <- 1/(1 - rsd(gcms_clap_clean$"5 µg/mL")) # formula from ISO 10993-18
 UF_list <- c(
   "UF (2)"   = 2, 
   "UF (4)"   = 4, 
@@ -285,24 +304,42 @@ for (m_name in names(UF_list)) {
   uf_val <- UF_list[[m_name]]
   total_FN <- 0
   total_FP <- 0
+  total_TP <- 0
+  total_TN <- 0
   
   
 for (i in 1:N_sim) {
-## 1) Concentration around the AET
-base_conc_sim <- sample(custom_sampled, size = N_extractables, replace = TRUE)
+Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
+Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
+K <- runif(0.1 * N_extractables, min = 10,    max = 100)
+## 3) Concentration from a custom distribution
+base_conc_sim <- sample(c(Z,Y,K))
 ## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
-simulated_RRF <- sample(RRF_norm, size = N_extractables, replace = TRUE)
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
 ## beta) UF corrections
-
-  corrected_conc <- (base_conc_sim / simulated_RRF) * uf_val
+  
+  exp_conc <- (base_conc_sim / simulated_RRF)
+  corrected_conc <- exp_conc * uf_val 
   
   total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
   total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
-  
+  total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
+  total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
+
 }
+
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final+TN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
+
+
 
 
 summary_table <- rbind(summary_table, data.frame(
@@ -310,10 +347,14 @@ summary_table <- rbind(summary_table, data.frame(
     FN_Rate = FN_Rate_final,
     FP_Rate = FP_Rate_final,
     FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-    FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
+    FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+    precision = precision,
+    recall = recall,
+    F1 = F1,
+    f_betal = f_beta
+))
 
 }
-
 UF_RSD
 ```
 
@@ -322,6 +363,8 @@ summary_table
 ```
 
 ## GC-MS Correction Factor percentile
+
+Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ Correction by dividing 16th percentile
 
 ```{r}
 percentile <- function(x) {
@@ -333,36 +376,58 @@ N_sim <- 10000
 N_extractables <- 80
 total_FN <- 0
 total_FP <- 0
+total_TP <- 0
+total_TN <- 0
 total_points <- N_sim * N_extractables
 
 
 for (i in 1:N_sim) {
-## 1) Concentration around the AET
-base_conc_sim <- sample(custom_sampled, size = N_extractables, replace = TRUE)
-simulated_RRF <- sample(RRF_norm, size = N_extractables, replace = FALSE)
+Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
+Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
+K <- runif(0.1 * N_extractables, min = 10,    max = 100)
+## 3) Concentration from a custom distribution
+base_conc_sim <- sample(c(Z,Y,K))
+## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+
+exp_conc <- (base_conc_sim / simulated_RRF)
 ## gamma) 16th percentile Correction
-corrected_conc <- (base_conc_sim / simulated_RRF) * (mean(simulated_RRF) / percentile(simulated_RRF))
+corrected_conc <- exp_conc * (mean(simulated_RRF) / percentile(simulated_RRF))
 
 total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
 total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
+total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
+total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
 
 }
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "Percentile (16th)",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
-
-
+  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
 
 ```
 
 ## GC-MS Correction RRFlow
+
+Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ Correction by applying condition on the RRFs.
 
 ```{r}
 set.seed(123)
@@ -370,36 +435,66 @@ N_sim <- 10000
 N_extractables <- 80
 total_FN <- 0
 total_FP <- 0
+total_TP <- 0
+total_TN <- 0
 total_points <- N_sim * N_extractables
 
-for (i in 1:N_sim) {
+RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
+RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
 
-## 1) Concentration around the AET
-base_conc_sim <- sample(custom_sampled, size = N_extractables, replace = TRUE)
-simulated_RRF <- sample(RRF_norm, size = N_extractables, replace = FALSE)
+for (i in 1:N_sim) {
+Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
+Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
+K <- runif(0.1 * N_extractables, min = 10,    max = 100)
+## 3) Concentration from a custom distribution
+base_conc_sim <- sample(c(Z,Y,K))
+## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(RRF_GCMS_superior0, size = N_extractables, replace = FALSE)
 ## delta) RRflow condition
 
-corrected_conc <- base_conc_sim
+exp_conc <- base_conc_sim * simulated_RRF
+corrected_conc <- exp_conc
 condition <- (simulated_RRF < 0.5) | (simulated_RRF > 2)
-corrected_conc[condition] <- corrected_conc[condition] / simulated_RRF[condition]
+corrected_conc[condition] <- exp_conc[condition] / simulated_RRF[condition]
 
 total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
 total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
+total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
+total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
 
 }
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "RRFlow",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
+  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
+
+```
+
+```{r}
+summary_table
 ```
 
 ## GC-MS Correction RRF \< 1
+
+Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ Correction by applying condition on the RRFs.
 
 ```{r}
 set.seed(123)
@@ -407,36 +502,58 @@ N_sim <- 10000
 N_extractables <- 80
 total_FN <- 0
 total_FP <- 0
+total_TP <- 0
+total_TN <- 0
 total_points <- N_sim * N_extractables
 
-for (i in 1:N_sim) {
+RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
+RRF_GCMS_superior0 <- RRF_GCMS_superior0[RRF_GCMS_superior0 > 0]
 
-## 1) Concentration around the AET
-base_conc_sim <- sample(custom_sampled, size = N_extractables, replace = TRUE)
-simulated_RRF <- sample(RRF_norm, size = N_extractables, replace = FALSE)
+for (i in 1:N_sim) {
+Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
+Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
+K <- runif(0.1 * N_extractables, min = 10,    max = 100)
+## 3) Concentration from a custom distribution
+base_conc_sim <- sample(c(Z,Y,K))
+## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(RRF_GCMS_superior0, size = N_extractables, replace = FALSE)
 ## epsilon RRF < 1
 
 corrected_conc <- base_conc_sim
 condition <- (simulated_RRF < 1)
 corrected_conc[condition] <- corrected_conc[condition] / simulated_RRF[condition]
 
+
 total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
 total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
+total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
+total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
 
 }
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "RRF<1",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
+  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
 
 
-summary_table
 ```
 
 ## Machine Learning
@@ -466,34 +583,68 @@ N_sim <- 10000
 N_extractables <- 80
 total_FN <- 0
 total_FP <- 0
+total_TP <- 0
+total_TN <- 0
+
 total_points <- N_sim * N_extractables
 
 for (i in 1:N_sim) {
 sim_data <- gc_ms %>% 
   sample_n(N_extractables, replace = TRUE)
   
-base_conc_sim <- sample(custom_sampled, size = N_extractables, replace = TRUE)
+Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
+Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
+K <- runif(0.1 * N_extractables, min = 10,    max = 100)
+## 3) Concentration from a custom distribution
+base_conc_sim <- sample(c(Z,Y,K))
 ## E) RRF generated via the machine learning
 simulated_RRF <- py$predict_rrf_raw(sim_data)
 ## no correction
-corrected_conc <- base_conc_sim / simulated_RRF
+corrected_conc <- base_conc_sim * simulated_RRF
 
 
 total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
 total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
+total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
+total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
 
 }
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
+
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "Machine Learning",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
+  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
 
+```
+
+```{r}
+summary_table
+```
+
+```{r}
+hist(simulated_RRF)
+```
+
+```{r}
+summary_table
 ```
 
 ## Machine Learning_2
@@ -506,6 +657,8 @@ N_sim <- 10000
 N_extractables <- 80
 total_FN <- 0
 total_FP <- 0
+total_TP <- 0
+total_TN <- 0
 total_points <- N_sim * N_extractables
 
 for (i in 1:N_sim) {
@@ -520,26 +673,44 @@ sim_data <- data.frame(
   check.names = FALSE 
 )
 
-base_conc_sim <- sample(custom_sampled, size = N_extractables, replace = TRUE)
+Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
+Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
+K <- runif(0.1 * N_extractables, min = 10,    max = 100)
+## 3) Concentration from a custom distribution
+base_conc_sim <- sample(c(Z,Y,K))
 ## E) RRF generated via the machine learning
 simulated_RRF <- py$predict_rrf_raw(sim_data)
 ## no correction
-corrected_conc <- base_conc_sim / simulated_RRF
+corrected_conc <- base_conc_sim * simulated_RRF
 
 total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
 total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
+total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
+total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
 
 }
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "Machine Learning_2",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
+  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
 
 
 ```
@@ -576,8 +747,8 @@ ggplot(plot_data, aes(x = Method, y = Rate*100, fill = Type)) +
   geom_errorbar(aes(ymin = pmax(0, Rate*100 - 1.96*SD), ymax = Rate*100 + 1.96*SD), 
                 position = position_dodge(width = 0.9), width = 0.2) +
   labs(
-    title = "Comparison of GC-MS Correction Methods (5 µg/mL)",
-    subtitle = "Custom distribution, RRF normal dist. N(0, 0.4²)",
+    title = paste0("Comparison of GC-MS Correction Methods (5 µg/mL)", " AET=", AET, "µg/mL"),
+    subtitle = "Conc. from Custom Distribution, RRF sampled from CLAP list data",
     y = "Rate (%)",
     x = "Method") +
   geom_text(aes(label = sprintf("%.1f%%", Rate*100)), position = position_dodge(width = 0.9), hjust = -0.5, size = 3, vjust = 0.1) +
@@ -585,5 +756,33 @@ ggplot(plot_data, aes(x = Method, y = Rate*100, fill = Type)) +
   scale_y_continuous(limits = c(0, 100)) +
   theme_minimal() +
   coord_flip()
+
+```
+
+```{r}
+summary_table %>%
+  select(Method, precision, recall, F1, f_betal)
+```
+
+ROC and Precision Recall plots
+
+```{r}
+ggplot(summary_table, aes(x = FP_Rate, y = recall, color = Method)) +
+  geom_point(size = 4) +
+  geom_abline(slope = 1, intercept = 0, linetype = "dashed") + 
+  xlim(0, 1) + ylim(0, 1) +
+  labs(title = "ROC",
+       x = "False Positive Rate (1-Specificity)",
+       y = "Recall (Sensitivity)") +
+  theme_minimal()
+
+ggplot(summary_table, aes(x = recall, y = precision, color = Method)) +
+  geom_point(size = 4) +
+  geom_abline(slope = 1, intercept = 0, linetype = "dashed") + # Random guess line
+  xlim(0, 1) + ylim(0, 1) +
+  labs(title = "Precision/Recall",
+       x = "Recall",
+       y = "Precision") +
+  theme_minimal()
 
 ```
