--- a/GC_MS_5_1A.qmd
+++ b/GC_MS_5_1A.qmd
@@ -127,7 +127,7 @@ hist(lcmsneg_clap_clean$"20 µg/mL",
 ## Define AET
 
 ```{r}
-AET <- 0.2
+AET <- 5
 ```
 
 ## Uniform distribution
@@ -191,15 +191,15 @@ summary_table <- data.frame(
   FN_Rate = numeric(),
   FP_Rate = numeric(),
   FN_SD = numeric(),
-  FP_SD = numeric()
+  FP_SD = numeric(),
+  precision = numeric(),
+  recall = numeric(),
+  F1 = numeric(),
+  f_beta = numeric()
 )
 ```
 
 ## GC-MS No Correction Scenarios
-
-Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ No UF correction
-
-Update 02 Jan 2026: add for loop and change the replace to FALSE Update 09 Jan 2026: add the exp concentration and change the base_conc_sim
 
 ```{r}
 set.seed(123)
@@ -215,8 +215,8 @@ for (i in 1:N_sim) {
 ## 1) Concentration around the AET
 base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
 ## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
-simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = TRUE)
-## alpha) No Correction
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+## I) No Correction
 corrected_conc <- base_conc_sim * simulated_RRF
 
 total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
@@ -228,15 +228,30 @@ total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
-
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "No Correction",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
+  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
 
+```
+
+```{r}
+summary_table
 ```
 
 ```{r}
@@ -282,25 +297,38 @@ for (m_name in names(UF_list)) {
   uf_val <- UF_list[[m_name]]
   total_FN <- 0
   total_FP <- 0
+  total_TP <- 0
+  total_TN <- 0
   
   
 for (i in 1:N_sim) {
 ## 1) Concentration around the AET
 base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
 ## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
-simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = TRUE)
-## beta) UF corrections
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+## II) UF corrections
   
-  exp_conc <- (base_conc_sim / simulated_RRF)
+  exp_conc <- (base_conc_sim * simulated_RRF)
   corrected_conc <- exp_conc * uf_val 
   
   total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
   total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
-  
+  total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
+  total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
+
 }
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final+TN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
+
+
 
 
 summary_table <- rbind(summary_table, data.frame(
@@ -308,9 +336,14 @@ summary_table <- rbind(summary_table, data.frame(
     FN_Rate = FN_Rate_final,
     FP_Rate = FP_Rate_final,
     FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-    FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
-
+    FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+    precision = precision,
+    recall = recall,
+    F1 = F1,
+    f_betal = f_beta
+))
 }
+
 
 UF_RSD
 ```
@@ -320,8 +353,6 @@ summary_table
 ```
 
 ## GC-MS Correction Factor percentile
-
-Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ Correction by dividing 16th percentile
 
 ```{r}
 percentile <- function(x) {
@@ -333,6 +364,8 @@ N_sim <- 10000
 N_extractables <- 80
 total_FN <- 0
 total_FP <- 0
+total_TP <- 0
+total_TN <- 0
 total_points <- N_sim * N_extractables
 
 
@@ -340,34 +373,44 @@ for (i in 1:N_sim) {
 ## 1) Concentration around the AET
 base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
 ## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
-simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = TRUE)
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
 
-exp_conc <- (base_conc_sim / simulated_RRF)
-## gamma) 16th percentile Correction
+exp_conc <- (base_conc_sim * simulated_RRF)
+## III) 16th percentile Correction
 corrected_conc <- exp_conc * (mean(simulated_RRF) / percentile(simulated_RRF))
 
 total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
 total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
+total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
+total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
 
 }
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "Percentile (16th)",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
-
-
+  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
 
 ```
 
 ## GC-MS Correction RRFlow
-
-Uniform concentration around the AET \\ Non Parametric Bootstrap with replacement of the GC/MS dataset \\ Correction by applying condition on the RRFs.
 
 ```{r}
 set.seed(123)
@@ -375,6 +418,8 @@ N_sim <- 10000
 N_extractables <- 80
 total_FN <- 0
 total_FP <- 0
+total_TP <- 0
+total_TN <- 0
 total_points <- N_sim * N_extractables
 
 RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
@@ -385,28 +430,42 @@ for (i in 1:N_sim) {
 ## 1) Concentration around the AET
 base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
 ## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
-simulated_RRF <- sample(RRF_GCMS_superior0, size = N_extractables, replace = TRUE)
-## delta) RRflow condition
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+## IV) RRflow condition
 
 exp_conc <- base_conc_sim * simulated_RRF
 corrected_conc <- exp_conc
 condition <- (simulated_RRF < 0.5) | (simulated_RRF > 2)
 corrected_conc[condition] <- exp_conc[condition] / simulated_RRF[condition]
 
-total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
-total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
-
+total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET), na.rm = TRUE)
+total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET), na.rm = TRUE)
+total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET), na.rm = TRUE)
+total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET), na.rm = TRUE)
 }
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "RRFlow",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
+  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
+
 ```
 
 ```{r}
@@ -423,6 +482,8 @@ N_sim <- 10000
 N_extractables <- 80
 total_FN <- 0
 total_FP <- 0
+total_TP <- 0
+total_TN <- 0
 total_points <- N_sim * N_extractables
 
 RRF_GCMS_superior0 <- gcms_clap_clean$"5 µg/mL"
@@ -433,31 +494,42 @@ for (i in 1:N_sim) {
 ## 1) Concentration around the AET
 base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
 ## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
-simulated_RRF <- sample(RRF_GCMS_superior0, size = N_extractables, replace = TRUE)
-## epsilon RRF < 1
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+## V RRF < 1
 
-corrected_conc <- base_conc_sim
+corrected_conc <- base_conc_sim * simulated_RRF
 condition <- (simulated_RRF < 1)
 corrected_conc[condition] <- corrected_conc[condition] / simulated_RRF[condition]
 
-
-total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
-total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
-
+total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET), na.rm = TRUE)
+total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET), na.rm = TRUE)
+total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET), na.rm = TRUE)
+total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET), na.rm = TRUE)
 }
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "RRF<1",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
+  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
 
 
-summary_table
 ```
 
 ## Machine Learning
@@ -487,6 +559,9 @@ N_sim <- 10000
 N_extractables <- 80
 total_FN <- 0
 total_FP <- 0
+total_TP <- 0
+total_TN <- 0
+
 total_points <- N_sim * N_extractables
 
 for (i in 1:N_sim) {
@@ -495,26 +570,39 @@ sim_data <- gc_ms %>%
   
 ## 1) Concentration around the AET
 base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
-## E) RRF generated via the machine learning
+## VI) RRF generated via the machine learning
 simulated_RRF <- py$predict_rrf_raw(sim_data)
 ## no correction
 corrected_conc <- base_conc_sim * simulated_RRF
 
-
-total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
-total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
-
+total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET), na.rm = TRUE)
+total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET), na.rm = TRUE)
+total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET), na.rm = TRUE)
+total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET), na.rm = TRUE)
 }
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
+TP_Rate_final <- total_TP / total_points
+TN_Rate_final <- total_TN / total_points
+precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
+recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
+F1 <- (2 * precision * recall / (precision + recall))
+beta <- 5
+f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
+
 
 summary_table <- rbind(summary_table, data.frame(
   Method = "Machine Learning",
   FN_Rate = FN_Rate_final,
   FP_Rate = FP_Rate_final,
   FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
+  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
+  precision = precision,
+  recall = recall,
+  F1 = F1,
+  f_betal = f_beta
+))
 
 ```
 
@@ -528,55 +616,6 @@ hist(simulated_RRF)
 
 ```{r}
 summary_table
-```
-
-## Machine Learning_2
-
-Taking random values of different physico chemical characteristics
-
-```{r}
-set.seed(123)
-N_sim <- 10000
-N_extractables <- 80
-total_FN <- 0
-total_FP <- 0
-total_points <- N_sim * N_extractables
-
-for (i in 1:N_sim) {
-sim_data <- data.frame(
-  BP = rnorm(N_extractables, 359, 150),
-  `Refractive Index` = rnorm(N_extractables, 1.52, 0.09), 
-  TPSA = rnorm(N_extractables, 40, 26),
-  NHOHCount = sample(0:4, N_extractables, replace=TRUE),
-  NumHDonors = sample(0:4, N_extractables, replace=TRUE),
-  NumRotatableBonds = sample(0:35, N_extractables, replace=TRUE),
-  NOCount = sample(0:12, N_extractables, replace=TRUE),
-  check.names = FALSE 
-)
-
-## 1) Concentration around the AET
-base_conc_sim <- runif(N_extractables, min = 0.5 * AET, max = 2 * AET)
-## E) RRF generated via the machine learning
-simulated_RRF <- py$predict_rrf_raw(sim_data)
-## no correction
-corrected_conc <- base_conc_sim * simulated_RRF
-
-total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
-total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
-
-}
-
-FN_Rate_final <- total_FN / total_points
-FP_Rate_final <- total_FP / total_points
-
-summary_table <- rbind(summary_table, data.frame(
-  Method = "Machine Learning_2",
-  FN_Rate = FN_Rate_final,
-  FP_Rate = FP_Rate_final,
-  FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points)))
-
-
 ```
 
 ## Comparison
@@ -599,9 +638,7 @@ method_levels <- c(
   "Percentile (16th)", 
   "RRFlow",
   "RRF<1",
-  "Machine Learning",
-  "Machine Learning_2"
-)
+  "Machine Learning")
 
 plot_data$Method <- factor(plot_data$Method, levels = method_levels)
 
@@ -612,7 +649,7 @@ ggplot(plot_data, aes(x = Method, y = Rate*100, fill = Type)) +
                 position = position_dodge(width = 0.9), width = 0.2) +
   labs(
     title = paste0("Comparison of GC-MS Correction Methods (5 µg/mL)", " AET=", AET, "µg/mL"),
-    subtitle = "Conc. Uniform distribution (around AET), RRF bootstrapped data from CLAP list",
+    subtitle = "Conc. Uniform distribution (around AET), RRF sampled from CLAP list data",
     y = "Rate (%)",
     x = "Method") +
   geom_text(aes(label = sprintf("%.1f%%", Rate*100)), position = position_dodge(width = 0.9), hjust = -0.5, size = 3, vjust = 0.1) +
@@ -620,5 +657,33 @@ ggplot(plot_data, aes(x = Method, y = Rate*100, fill = Type)) +
   scale_y_continuous(limits = c(0, 100)) +
   theme_minimal() +
   coord_flip()
+
+```
+
+```{r}
+summary_table %>%
+  select(Method, precision, recall, F1, f_betal)
+```
+
+ROC and Precision Recall plots
+
+```{r}
+ggplot(summary_table, aes(x = FP_Rate, y = recall, color = Method)) +
+  geom_point(size = 4) +
+  geom_abline(slope = 1, intercept = 0, linetype = "dashed") + 
+  xlim(0, 1) + ylim(0, 1) +
+  labs(title = "ROC",
+       x = "False Positive Rate (1-Specificity)",
+       y = "Recall (Sensitivity)") +
+  theme_minimal()
+
+ggplot(summary_table, aes(x = recall, y = precision, color = Method)) +
+  geom_point(size = 4) +
+  geom_abline(slope = 1, intercept = 0, linetype = "dashed") + # Random guess line
+  xlim(0, 1) + ylim(0, 1) +
+  labs(title = "Precision/Recall",
+       x = "Recall",
+       y = "Precision") +
+  theme_minimal()
 
 ```
