--- a/GC_MS_5_3A.qmd
+++ b/GC_MS_5_3A.qmd
@@ -127,7 +127,7 @@ hist(lcmsneg_clap_clean$"20 µg/mL",
 ## Define AET
 
 ```{r}
-AET <- 5
+AET <- 15
 ```
 
 ## Uniform distribution
@@ -221,9 +221,9 @@ Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
 K <- runif(0.1 * N_extractables, min = 10,    max = 100)
 ## 3) Concentration from a custom distribution
 base_conc_sim <- sample(c(Z,Y,K))
-## B) Normal Distribution of RRF around 1
-simulated_RRF <- rnorm(N_extractables, 1, 0.2)
-## alpha) No Correction
+## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+## I) No Correction
 corrected_conc <- base_conc_sim * simulated_RRF
 
 total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
@@ -314,9 +314,9 @@ Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
 K <- runif(0.1 * N_extractables, min = 10,    max = 100)
 ## 3) Concentration from a custom distribution
 base_conc_sim <- sample(c(Z,Y,K))
-## B) Normal Distribution of RRF around 1
-simulated_RRF <- rnorm(N_extractables, 1, 0.2)
-## beta) UF corrections
+## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
+## II) UF corrections
   
   exp_conc <- (base_conc_sim / simulated_RRF)
   corrected_conc <- exp_conc * uf_val 
@@ -327,6 +327,7 @@ simulated_RRF <- rnorm(N_extractables, 1, 0.2)
   total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
 
 }
+
 
 FN_Rate_final <- total_FN / total_points
 FP_Rate_final <- total_FP / total_points
@@ -352,9 +353,8 @@ summary_table <- rbind(summary_table, data.frame(
     F1 = F1,
     f_betal = f_beta
 ))
+
 }
-
-
 UF_RSD
 ```
 
@@ -387,11 +387,11 @@ Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
 K <- runif(0.1 * N_extractables, min = 10,    max = 100)
 ## 3) Concentration from a custom distribution
 base_conc_sim <- sample(c(Z,Y,K))
-## B) Normal Distribution of RRF around 1
-simulated_RRF <- rnorm(N_extractables, 1, 0.2)
+## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(gcms_clap_clean$"5 µg/mL", size = N_extractables, replace = FALSE)
 
 exp_conc <- (base_conc_sim / simulated_RRF)
-## gamma) 16th percentile Correction
+## III) 16th percentile Correction
 corrected_conc <- exp_conc * (mean(simulated_RRF) / percentile(simulated_RRF))
 
 total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
@@ -448,9 +448,9 @@ Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
 K <- runif(0.1 * N_extractables, min = 10,    max = 100)
 ## 3) Concentration from a custom distribution
 base_conc_sim <- sample(c(Z,Y,K))
-## B) Normal Distribution of RRF around 1
-simulated_RRF <- rnorm(N_extractables, 1, 0.2)
-## delta) RRflow condition
+## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(RRF_GCMS_superior0, size = N_extractables, replace = FALSE)
+## IV) RRflow condition
 
 exp_conc <- base_conc_sim * simulated_RRF
 corrected_conc <- exp_conc
@@ -515,9 +515,9 @@ Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
 K <- runif(0.1 * N_extractables, min = 10,    max = 100)
 ## 3) Concentration from a custom distribution
 base_conc_sim <- sample(c(Z,Y,K))
-## B) Normal Distribution of RRF around 1
-simulated_RRF <- rnorm(N_extractables, 1, 0.2)
-## epsilon RRF < 1
+## A) Non-Parametric Bootstrap of the GC/MS dataset (5µg/mL)
+simulated_RRF <- sample(RRF_GCMS_superior0, size = N_extractables, replace = FALSE)
+## V) RRF < 1
 
 corrected_conc <- base_conc_sim
 condition <- (simulated_RRF < 1)
@@ -597,7 +597,7 @@ Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
 K <- runif(0.1 * N_extractables, min = 10,    max = 100)
 ## 3) Concentration from a custom distribution
 base_conc_sim <- sample(c(Z,Y,K))
-## E) RRF generated via the machine learning
+## VI) RRF generated via the machine learning
 simulated_RRF <- py$predict_rrf_raw(sim_data)
 ## no correction
 corrected_conc <- base_conc_sim * simulated_RRF
@@ -647,74 +647,6 @@ hist(simulated_RRF)
 summary_table
 ```
 
-## Machine Learning_2
-
-Taking random values of different physico chemical characteristics
-
-```{r}
-set.seed(123)
-N_sim <- 10000
-N_extractables <- 80
-total_FN <- 0
-total_FP <- 0
-total_TP <- 0
-total_TN <- 0
-total_points <- N_sim * N_extractables
-
-for (i in 1:N_sim) {
-sim_data <- data.frame(
-  BP = rnorm(N_extractables, 359, 150),
-  `Refractive Index` = rnorm(N_extractables, 1.52, 0.09), 
-  TPSA = rnorm(N_extractables, 40, 26),
-  NHOHCount = sample(0:4, N_extractables, replace=TRUE),
-  NumHDonors = sample(0:4, N_extractables, replace=TRUE),
-  NumRotatableBonds = sample(0:35, N_extractables, replace=TRUE),
-  NOCount = sample(0:12, N_extractables, replace=TRUE),
-  check.names = FALSE 
-)
-
-Z <- runif(0.7 * N_extractables, min = 0.001, max = 1)
-Y <- runif(0.2 * N_extractables, min = 1,     max = 10)
-K <- runif(0.1 * N_extractables, min = 10,    max = 100)
-## 3) Concentration from a custom distribution
-base_conc_sim <- sample(c(Z,Y,K))
-## E) RRF generated via the machine learning
-simulated_RRF <- py$predict_rrf_raw(sim_data)
-## no correction
-corrected_conc <- base_conc_sim * simulated_RRF
-
-total_FN <- total_FN + sum((base_conc_sim > AET) & (corrected_conc < AET))
-total_FP <- total_FP + sum((base_conc_sim < AET) & (corrected_conc > AET))
-total_TP <- total_TP + sum((base_conc_sim > AET) & (corrected_conc > AET))
-total_TN <- total_TN + sum((base_conc_sim < AET) & (corrected_conc < AET))
-
-}
-
-FN_Rate_final <- total_FN / total_points
-FP_Rate_final <- total_FP / total_points
-TP_Rate_final <- total_TP / total_points
-TN_Rate_final <- total_TN / total_points
-precision <- TP_Rate_final / (TP_Rate_final+FP_Rate_final)
-recall <- TP_Rate_final / (TP_Rate_final + FN_Rate_final)
-F1 <- (2 * precision * recall / (precision + recall))
-beta <- 5
-f_beta <- (1 + beta^2) * (precision * recall) / ((beta^2 * precision) + recall)
-
-summary_table <- rbind(summary_table, data.frame(
-  Method = "Machine Learning_2",
-  FN_Rate = FN_Rate_final,
-  FP_Rate = FP_Rate_final,
-  FN_SD = sqrt(FN_Rate_final * (1 - FN_Rate_final) / total_points),
-  FP_SD = sqrt(FP_Rate_final * (1 - FP_Rate_final) / total_points),
-  precision = precision,
-  recall = recall,
-  F1 = F1,
-  f_betal = f_beta
-))
-
-
-```
-
 ## Comparison
 
 ```{r}
@@ -735,8 +667,7 @@ method_levels <- c(
   "Percentile (16th)", 
   "RRFlow",
   "RRF<1",
-  "Machine Learning",
-  "Machine Learning_2"
+  "Machine Learning"
 )
 
 plot_data$Method <- factor(plot_data$Method, levels = method_levels)
@@ -748,7 +679,7 @@ ggplot(plot_data, aes(x = Method, y = Rate*100, fill = Type)) +
                 position = position_dodge(width = 0.9), width = 0.2) +
   labs(
     title = paste0("Comparison of GC-MS Correction Methods (5 µg/mL)", " AET=", AET, "µg/mL"),
-    subtitle = "Conc. from Custom Distribution, RRF sampled from Normal Distribution",
+    subtitle = "Conc. from Custom Distribution, RRF sampled from CLAP list data",
     y = "Rate (%)",
     x = "Method") +
   geom_text(aes(label = sprintf("%.1f%%", Rate*100)), position = position_dodge(width = 0.9), hjust = -0.5, size = 3, vjust = 0.1) +
@@ -786,3 +717,5 @@ ggplot(summary_table, aes(x = recall, y = precision, color = Method)) +
   theme_minimal()
 
 ```
+
+
